# syslog-ng

./: .gitignore
lib/: cfg-parser.c
modules/secure-logging/: Makefile.am  secure-logging.c  slog-dest-grammar.ym  slog-dest-parser.c  slog-dest-parser.h  slog-dest.c  slog-dest.h
